--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
   },
   "autoload": {
     "psr-4": {
-      "BaksDev\\Manufacture\\Part\\Application": ""
+      "BaksDev\\Manufacture\\Part\\Application\\": ""
     }
   },
   "config": {
